2008-08-31 Jens Tkotz <jens@peino.de> 1.5.9-svn-b16

 * Fix: Use textfield again in phpNuke for ImageMap description.
        Broke that in b12.
        
2008-08-30 Jens Tkotz <jens@peino.de> 1.5.9-svn-b15

 Change: 1.5.9 icon.

 Fix: Some wordings.
      Thanks to Julien.

2008-08-30 Jens Tkotz <jens@peino.de> 1.5.9-svn-b14

 * Change: Reenabled KOI8-R

 * Change: Removed some unneeded PHP version check in isSupportedCharset
           as the minimum PHP is 4.1.0

 * Fix: _() -> gTranslate in stats.header

2008-08-28 Jens Tkotz <jens@peino.de> 1.5.9-svn-b13

 * Fix: Link to comments overview on mainpage.

 * Fix: getCaptionDate when using exiftags.
        Use "Image Generated" first, then "Image Created".

 * Change: Some Layout fixes.

2008-08-28 Jens Tkotz <jens@peino.de> 1.5.9-svn-b12

 * FIX: unhtmlentities() changed 0 values to '',
        that broke sanitizeInput() and thus getRequestVar()

   I am very angry about my self,
   as this caused a lot trouble at various places.

2008-08-27 Jens Tkotz <jens@peino.de> 1.5.9-svn-b11

 * Fix: Gallery works now in turkish! HOOORAY !

   Thanks to katpatuka for fixing this LOONG outstanding bug.

2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b10

 * Fix: Check if comments are enabled at all for comments overview.

2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b9

 * Change: Show links for comments overview only of there are comments.

 * Fix: Increased check level for comments overview.

2008-08-26 Jens Tkotz <jens@peino.de> 1.5.9-svn-b8

 * Fix: Password strengthmeter in setup broke change or
        set of new admin password.

 * Fix: FitToWindow broken.

 * Fix: sanitizeInput returns just the unhtmlentities value instead of
        using gHtmlSafe which does a surrounding htmlentities.

 * Change: Update Walter Zorns
                wz_tooltip.js to 5.20
                tip_balloon.js to 1.6

 * Fix: Line endings in wz_jsgraphics.js

2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b7
