@@ -1,3 +1,10 @@
+2008-09-02 Jens Tkotz <jens@peino.de> 1.5.9-svn-b17
+
+ * New: Added arrowkey navigation for microthumbs.
+
+ * Fix: Don't show blue adminbox in photoview
+	when user has chosen a background color for albums.
+
 2008-08-31 Jens Tkotz <jens@peino.de> 1.5.9-svn-b16
 
  * Fix: Use textfield again in phpNuke for ImageMap description.
@@ -72,8 +79,8 @@
 
  * New: classes/Colors.php, which is a PHP port of rgbcolor.js
 
- * Fix: Don't show blue adminbox when user has chosen a background color
-        for albums.
+ * Fix: Don't show blue adminbox in thumbsview
+	when user has chosen a background color for albums.
 
  * Fix: Added new testrequirement 'comments_overview_for_all',
         1.5.8 implentation for that feature was broken.
